--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+     <h1>Hello!</h1>
 
 
 
-    <script src="js/main.js"> </script> 
+    <script src="js/main.js"> </script>
 </body>
 </html>
