add starting HTML content

--- a/index.html
+++ b/index.html
@@ -7,8 +7,38 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-     <h1>Hello!</h1>
+    <div class="container">
+        <h1>Learning Git</h1>
 
+        <p>Lorem ipsum dolor sit amet, recusandae mollis
+          sagittis lectus inceptos risus massa.
+          Eu facilisis, imperdiet nulla, orci accumsan
+          elit. Integer proin sed pellentesque in,
+          tellus laoreet justo accumsan elit,
+          ac nullam ac odio erat.
+          Netus platea eget adipiscing eu id,
+          nonummy maecenas risus porta sapien, nibh nam
+          integer vitae, sed sed tempor ipsum in dictum
+          porta, mauris mi molestiae eleifend ipsum.
+          Mi lacus mi duis est est vel,
+        </p>
+
+        <p>Lorem ipsum dolor sit amet, recusandae mollis
+          sagittis lectus inceptos risus massa.
+          Eu facilisis, imperdiet nulla, orci accumsan
+          elit. Integer proin sed pellentesque in,
+          tellus laoreet justo accumsan elit,
+          ac nullam ac odio erat.
+          Netus platea eget adipiscing eu id,
+          nonummy maecenas risus porta sapien, nibh nam
+          integer vitae, sed sed tempor ipsum in dictum
+          porta, mauris mi molestiae eleifend ipsum.
+          Mi lacus mi duis est est vel,
+        </p>
+
+
+
+    </div>
 
 
     <script src="js/main.js"> </script>
