add info about version control and collaboration

--- a/index.html
+++ b/index.html
@@ -36,8 +36,14 @@
           Mi lacus mi duis est est vel,
         </p>
 
-
-
+        <aside>
+            <h2>Version Control Loves Collaboration</h2>
+            <ol>
+                <li>Reason 1</li>
+                <li>Reason 2</li>
+                <li>Reason 3</li>
+            </ol>
+        </aside>
     </div>
 
 
