add site footer

--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
           porta, mauris mi molestiae eleifend ipsum.
           Mi lacus mi duis est est vel,
         </p>
-
-
-
     </div>
+
+    <footer>
+        &copy; 2017 Lisa Long
+    </footer>
 
 
     <script src="js/main.js"> </script>
