update the main heading

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Learning Git</h1>
+        <h1>Learning Git is Awesome</h1>
 
         <p>Lorem ipsum dolor sit amet, recusandae mollis
           sagittis lectus inceptos risus massa.
@@ -35,8 +35,6 @@
           porta, mauris mi molestiae eleifend ipsum.
           Mi lacus mi duis est est vel,
         </p>
-<<<<<<< HEAD
-=======
 
         <aside>
             <h2>Version Control Loves Collaboration</h2>
@@ -46,7 +44,7 @@
                 <li>Reason 3</li>
             </ol>
         </aside>
->>>>>>> sidebar
+
     </div>
 
     <footer>
