alter the main heading and paragraph content

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Learning Git</h1>
+        <h1>Learnin' Me Some Git</h1>
 
         <p>Lorem ipsum dolor sit amet, recusandae mollis
           sagittis lectus inceptos risus massa.
@@ -23,20 +23,9 @@
           Mi lacus mi duis est est vel,
         </p>
 
-        <p>Lorem ipsum dolor sit amet, recusandae mollis
-          sagittis lectus inceptos risus massa.
-          Eu facilisis, imperdiet nulla, orci accumsan
-          elit. Integer proin sed pellentesque in,
-          tellus laoreet justo accumsan elit,
-          ac nullam ac odio erat.
-          Netus platea eget adipiscing eu id,
-          nonummy maecenas risus porta sapien, nibh nam
-          integer vitae, sed sed tempor ipsum in dictum
-          porta, mauris mi molestiae eleifend ipsum.
-          Mi lacus mi duis est est vel,
-        </p>
-<<<<<<< HEAD
-=======
+        <p>paragraph 2</p>
+
+        <p>paragraph 3</p>
 
         <aside>
             <h2>Version Control Loves Collaboration</h2>
@@ -46,7 +35,7 @@
                 <li>Reason 3</li>
             </ol>
         </aside>
->>>>>>> sidebar
+
     </div>
 
     <footer>
